# apple-swift

lib/Basic/: LangOptions.cpp  Platform.cpp
lib/ClangImporter/: ClangImporter.cpp
lib/Driver/: Driver.cpp
stdlib/: CMakeLists.txt
stdlib/public/SwiftShims/: CMakeLists.txt
stdlib/public/core/: CMakeLists.txt
stdlib/public/stubs/: ThreadLocalStorage.cpp
test/stdlib/: llvm-support-odr-violation-static.test-sh
